	PR debug/33537 	* dwarf2out.c (gen_formal_parameter_die, gen_variable_die, 	gen_decl_die): Use TREE_TYPE (TREE_TYPE (decl)) as type 	rather than TREE_TYPE (decl) if DECL_BY_REFERENCE (decl).

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@129820 138bc75d-0d04-0410-961f-82ee72b054a4